infra/openldap/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openldap-stack-ha-phpldapadmin
  namespace: openldap
  labels:
    app: phpldapadmin
    
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: openldap-stack-ha-phpldapadmin
            port:
              name: http
    host: ldapadmin-internal.int.prossertech.com
  tls:
  - hosts:
    - "*.int.prossertech.com"
    secretName: int-prossertech-com
